--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: Valorant;
     src: url(../sources/valorant.ttf);
@@ -5,8 +6,25 @@
 
 *{
     margin: 0;
+    box-sizing: border-box;
     padding: 0;
     font-family: Valorant;
+}
+
+@media print {
+    * {
+        background-color: white !important;
+        color: #000 !important;
+        opacity: 1 !important;
+        text-align: left !important;
+    }
+}
+
+@media screen and (max-width:1100px) {
+    body {
+        background-color: black;
+        width: 100%;
+    }
 }
 
 body{
