--- a/styles/competitive.css
+++ b/styles/competitive.css
@@ -3,6 +3,26 @@
     src: url(../sources/valorant.ttf);
 }
 
+@media screen and (max-width:1150px) {
+    body {
+        background-color: black;
+        width: 100%;
+    }
+    .tournament img{
+        width: 300px;
+        height: 88px;
+    }
+}
+
+@media print {
+    * {
+        background-color: white !important;
+        color: #000 !important;
+        opacity: 1 !important;
+        text-align: left !important;
+    }
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -91,7 +111,11 @@ footer{
 }
 
 .current_poster{
-   height: 1152px;
+    height: 1152px;
+    background-image: url(../sources/VCT-Game-Changers-scaled.jpg);
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .current_event_text p{
@@ -145,6 +169,7 @@ footer{
 .tournament{
     display: inline-block;
     margin-right: 2%;
+    padding-left: 1% ;
 }
 
 .tournament img{
@@ -155,5 +180,9 @@ footer{
 .tournament h4{
     margin-top: 5%;
     margin-bottom: 5%;
+    color: #FD4556 ;
+}
+
+.topmenu a.active{
     color: #FD4556 ;
 }
