--- a/styles/maps.css
+++ b/styles/maps.css
@@ -9,6 +9,37 @@
     font-family: Valorant;
 }
 
+@media screen and (max-width:1660px) {
+    body {
+        background-color: black;
+        width: 100%;
+    }
+
+    .topnavtext{
+        margin-bottom: 20px;
+    }
+
+    .singlemap img{
+        width: 150px;
+        height: 75px;
+    }
+
+    .topnavtext{
+        margin-top: 0;
+        padding: 2%;
+    }
+
+}
+
+@media print {
+    * {
+        background-color: white !important;
+        color: #000 !important;
+        opacity: 1 !important;
+        text-align: left !important;
+    }
+}
+
 body{
     color:white;
 }
@@ -110,7 +141,7 @@ footer{
     padding-bottom: 6%;
 }
 
-.maprow, .topnavtext{
+.maprow, .topnavtext, .maprow2, .maprow3{
     display: inline-block;
 }
 
@@ -127,6 +158,7 @@ footer{
 .maprow3{
     margin-left: 44%;
     display: inline-block;
+    padding-top: 30px;
 }
 
 .bottomnavtitle{
@@ -168,5 +200,9 @@ footer{
 
 .bottomnavcontent{
     padding-bottom: 5%;
+}
+
+.topmenu a.active{
+    color: #FD4556 ;
 }
 
